--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>فحص مواعيد</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+    <div class="page-border">
+        <div class="switch-container">
+            <label class="switch">
+                <input type="checkbox" id="theme-toggle">
+                <span class="slider">
+                    <i class="fa-solid fa-sun icon"></i>
+                </span>
+            </label>
+        </div>
+    </div>
     <div class="login-container">
+       
         <div class="loginFormCont">
             <div class="login-border">
                 <h2>التسجيل</h2>
@@ -30,13 +42,13 @@
         </div>
     </div>
     
-    <!-- إضافة جدول لعرض معلومات المستخدم -->
+
     <div class="info-container" style="display:none;">
         <div class="info-border">
           <h2>معلوماتك</h2>
         </div>
         <div id="notify-checked">
-            <p id="message-checked">📅 تم العثور على 8 مواعيد ☑️</p>
+            <p id="message-checked"></p>
         </div>
         <div class="info-table-border">
         <table class="info-table">
