--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div id="notify-info-info">
             <p id="message-info-info" style="margin-block-end: -0.6em;"></p>
         </div>
-        <button class="checkRend">ابدا البحث عن مواعيد</button>
+        <button class="checkRend">ابدا البحث</button>
         <button class="HideInfo">إخفاء معلوماتي</button>
         <button class="logout">تسجيل الخروج</button>
     </div>
