--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <input type="checkbox" id="theme-toggle">
                 <span class="slider">
                     <i class="fa-solid fa-sun icon"></i>
+                    <i class="fa-solid fa-moon icon"></i>
                 </span>
             </label>
         </div>
